tests/baselines/reference/parserFunctionDeclaration2.errors.txt
tests/cases/conformance/parser/ecmascript5/FunctionDeclarations/parserFunctionDeclaration2.ts(1,24): error TS1183: An implementation cannot be declared in ambient contexts.


==== tests/cases/conformance/parser/ecmascript5/FunctionDeclarations/parserFunctionDeclaration2.ts (1 errors) ====
    declare function Foo() {
                           ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
    }